# agent-ai

./: .env.example  .pre-commit-config.yaml  CI_CD_CONFIG.md  DEVELOPMENT_SETUP.md  PROJECT_STRUCTURE.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  test.yml
docker/: Dockerfile  agent-ai-compose.yml
