[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-ai"
version = "1.0.0"
description = "Projeto de Agente AI - Base para desenvolvimento de agentes inteligentes"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "José Barbosa"}
]
dependencies = [
    "pytest>=7.0.0",
    "celery>=5.2.0",
    "redis>=4.5.0",
    "gunicorn>=21.0.0",
    "psycopg2-binary>=2.9.0",
    "requests>=2.31.0",
]

classifiers = [
    # Development Status :: 4 - Beta
    # Programming Language :: Python :: 3
    # License :: OSI Approved :: MIT License
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "autoflake>=1.3.0",
]

docs = [
    "sphinx>=6.0.0",
    "sphinx-autobuild>=2021.3.0",
]

test = [
    "pytest>=7.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[tool.setuptools]
packages = ["agent-ai"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311"]
include = '\\.py$'

[tool.isort]
profile = "black"
multi_line_output = "extend"
skip = [".env", "__pycache__", ".gitignore"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true